# kbs-provider-amazon-kb

./: .gitignore  README.md  pyproject.toml  run.py  test_con_aws_kbs.ipynb
src/: app.py  config.py
src/adapter/: AmazonKnowledgeBaseProvider.py
src/adapter/rest/: routes.py
src/core/: models.py  ports.py
src/infrastructure/: aws_kb.py
