[project]
name = "kbs-provider-amazon-kb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.45",
    "fastapi>=0.128.6",
    "ipykernel>=7.2.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.3.2",
    "uvicorn>=0.40.0",
]
